Fixed details modals on mobile version of Inside Store page so thumbnails now fit within parent box

--- a/htdocs/prod/web/assets/css/mobile.css
+++ b/htdocs/prod/web/assets/css/mobile.css
@@ -100,6 +100,16 @@
       margin-top: 0;
     }
 
+    .details-thumbnail {
+      max-width: 100%;
+    }
+
+    @-moz-document url-prefix() {
+      .details-thumbnail {
+        max-width: calc(100vw - 60px);
+      }
+    }
+
     /*Country Kitchen*/
     .originals-feature {
       margin-bottom: 0 !important;
