--- a/htdocs/prod/web/assets/css/styles.css
+++ b/htdocs/prod/web/assets/css/styles.css
@@ -6089,8 +6089,11 @@ h2.box {
 
 .row.nopadding {
   margin: 10px 0 30px 0; }
-  .row.nopadding > div:not(.details) {
-    padding: 0; }
+  
+.row.nopadding > div:not(.details) {
+    margin-bottom: 0;
+    padding: 0; 
+}
 
 .border {
   border: 1px solid #ccc;}
